# docuvault

./: Cargo.toml  create_image.sh  dev  docker-compose.yaml
docuvault-convert/: .gitignore  Cargo.toml  Dockerfile  build.rs
docuvault-convert/src/: main.rs
docuvault-convert/src/apis/: convert.rs
docuvault-convert/src/entity/: docfile.rs  docorg.rs  docorg_tag.rs  mod.rs  prelude.rs
docuvault-convert/src/error/: mod.rs
docuvault-convert/src/grpc/: mod.rs
docuvault-convert/src/test/: mod.rs
docuvault-dashboard/: package-lock.json  package.json
docuvault-file/: .gitignore  Cargo.toml  Dockerfile  build.rs
docuvault-file/src/: main.rs
docuvault-file/src/apis/: delete.rs  download.rs  mod.rs  upload.rs
docuvault-file/src/db/schema/: redis.rs
docuvault-file/src/entity/: convert.rs  docuser.rs  tag.rs
docuvault-file/src/error/: mod.rs
docuvault-main/: Cargo.toml  Dockerfile  README.md  build.rs  migrate
docuvault-main/macros/src/: lib.rs
docuvault-main/migration/: Cargo.toml
docuvault-main/migration/src/: m20220101_000001_create_table.rs
docuvault-main/src/: main.rs
docuvault-main/src/bootstrap/: mod.rs
docuvault-main/src/common/: object.rs
docuvault-main/src/db/: macros.rs  mod.rs
docuvault-main/src/db/schema/: redis.rs
docuvault-main/src/entity/: docfile.rs  docorg.rs  docorg_scope.rs  docorg_sequence.rs  prelude.rs  scope.rs  scope_sequence.rs  sequence.rs
docuvault-main/src/middleware/: guard.rs
docuvault-main/src/modules/: mod.rs  redis.rs
docuvault-main/src/modules/background/: mod.rs
docuvault-main/src/modules/grpc/: mod.rs
docuvault-main/src/modules/markdown/: mod.rs
docuvault-main/src/modules/sequence/: mod.rs
docuvault-main/src/modules/sequence/application/port/: input.rs  output.rs
docuvault-main/src/modules/sequence/application/service/: mod.rs
docuvault-main/src/modules/sequence/domain/entity/: doc_seq_order.rs  mod.rs  sequence.rs
docuvault-main/src/modules/sequence/domain/service/: mod.rs
docuvault-main/src/modules/sequence/error/: mod.rs
docuvault-main/src/modules/sequence/framework/: mod.rs
docuvault-main/src/modules/tag/: mod.rs
docuvault-main/src/modules/tag/application/port/: input.rs  output.rs
docuvault-main/src/modules/tag/application/service/: mod.rs
docuvault-main/src/modules/tag/domain/entity/: mod.rs  tag.rs  tag_set.rs
docuvault-main/src/modules/tag/domain/service/: mod.rs
docuvault-main/src/modules/tag/framework/: mod.rs
docuvault-main/src/routes/: error.rs  mod.rs
docuvault-main/src/routes/auth/: constant.rs  error.rs  mod.rs  object.rs  service.rs
docuvault-main/src/routes/document/: error.rs  mod.rs  object.rs  service.rs
docuvault-main/src/routes/file/: error.rs  mod.rs  object.rs
docuvault-main/src/routes/resource/: error.rs  mod.rs  object.rs  service.rs
file-reverse-proxy/: Cargo.toml  Dockerfile  build.rs
file-reverse-proxy/macros/: Cargo.toml
file-reverse-proxy/src/: main.rs
file-reverse-proxy/src/error/: mod.rs
file-reverse-proxy/src/forward/: delete.rs  download.rs  upload.rs
file-reverse-proxy/src/module/: mod.rs
protos/: convert.proto  delete.proto  download.proto  (+3 more)
(+50 files in other folders)
