[package]
name = "docuvault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
tokio = { version = "1.24.1", features = ["full"] }
axum = "0.6.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tera = "1.17.1"
chrono = { version = "0.4.23", features = ["serde"] }
