[package]
name = "docuvault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
tokio = { version = "1.24.1", features = ["full"] }
axum = { version = "0.6.1", features = ["headers"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tera = "1.17.1"
chrono = { version = "0.4.23", features = ["serde"] }
sea-orm = { version = "0.11.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower-http = { version = "0.3.5", features = ["trace", "cors"] }
regex = "1.7.1"
once_cell = "1.17.0"
jsonwebtoken = "8.2.0"
rand = "0.8.5"
sha2 = "0.10.6"
argon2 = "0.4.1"
redis = { version = "0.22.3", features = ["tokio-comp"] }
bb8-redis = "0.12.0"
bb8 = "0.8.0"
paste = "1.0.11"
comrak = "0.16.0"
macros = { path = "macros" }
migration = { path = "migration" }
